@@ -24,10 +24,6 @@
 # Number of pre-generated deterministic addresses
 #keycnt=250
 
-# Do not use uncompressed keys, unless you know what you
-# are doing. Never use uncompresssed for SegWit wallets.
-#uncompressed=false
-
 # Transaction fee to be used (in BTC)
 #fee=0.0001
 
