@@ -1,4 +1,5 @@
 1.9.3:
+* Wallet: disallow uncompressed keys, for WPKH segwit address safety
 * Client: Ignore the value of MAX_GETDATA_FORWARD when there are no blocks in progress
 * MarshalText() method madded to "sys.SyncBool" and "sys.SyncInt" (fixes WebUI issue)
 * From block #494784 onward, allow twice bigger blocks on mainnet (segwit2x)
